fixed overflow

--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -1,5 +1,10 @@
 @import url('https://fonts.googleapis.com/css?family=Poppins:400,500,600,700&display=swap');
-@import url("partials/_variables.scss");
+@import url('partials/variables.scss');
+
+/* Global */
+html, body {
+  overflow-x: hidden;
+}
 
 
 /* Header css */
@@ -9,7 +14,7 @@
 }
 
 .navbar a{
-  color: $color_fuente !important;
+  color: aliceblue !important;
 }
 
 .navbar img{
@@ -21,13 +26,17 @@
 }
 
 .bg-light{
-  background: $color_default !important;
+  background: black !important;
 }
 
 /* Main css */
 body{
   background-image: url("https://cdn.dribbble.com/users/1862205/screenshots/5537727/pizza_flicker__dribbble__2.gif") !important;
   background-position: center;
+}
+
+.container-fluid {
+  text-align: center;
 }
 
 .container{
@@ -39,15 +48,15 @@ body{
 }
 
 .principal-banner{
-  background-color: $color_secundario;
+  background-color: red;
   position: relative;
   top: 150px;
 }
 
 .titulo-container h1{
   margin-top: 4rem;
-  font-family: $fuente_principal;
-  color: $color_fuente;
+  font-family: 'Raleway', sans-serif;
+  color: aliceblue;
   text-decoration: underline 1.5px;
 }
 
@@ -61,7 +70,7 @@ body{
   margin-left: 1rem;
   margin-right: 1rem;
   height: 340px;
-  color: $color_default;
+  color: black;
   background-color: rgba(255, 255, 255, 0.185);
 
   img{
@@ -73,13 +82,13 @@ body{
 }
 
 .opciones-container{
-  background-color: $color_default;
+  background-color: black;
   margin-bottom: 3rem;
 }
 
 .titulo-opciones{
-  color: $color_fuente;
-  font-family: $fuente_principal;
+  color: aliceblue;
+  font-family: 'Raleway', sans-serif;
 }
 
 .lista-paginas{
@@ -91,14 +100,14 @@ body{
   }
 
   a{
-    color: $color_fuente;
-    font-family: $fuente_principal;
+    color: aliceblue;
+    font-family: 'Raleway', sans-serif;
     font-weight: bold;
   }
 }
  
 .sites-container{
-  background-color: $color_default;
+  background-color: black;
   height: 900px;
   margin-bottom: 3rem;
 }
@@ -106,7 +115,7 @@ body{
 .articulo-site{
   padding-top: 9rem;
   margin-bottom: 2rem;
-  color: $color_fuente;
+  color: aliceblue;
 
   iframe{
     border-radius: 5px;
@@ -119,7 +128,7 @@ footer{
   height: 240px;
   width: 100%;
   place-items: center;
-  background: $color_default;
+  background: black;
 }
 
 .wrapper a{
@@ -132,10 +141,10 @@ footer{
   width: 30px;
   margin: 0 5px;
   overflow: hidden;
-  background: $color_default;
+  background: black;
   border-radius: 50px;
   cursor: pointer;
-  box-shadow: 0px 10px 10px $color_default;
+  box-shadow: 0px 10px 10px black;
   transition: all 0.3s ease-out;
 }
 .wrapper .button:hover{
@@ -153,22 +162,22 @@ footer{
 }
 
 .wrapper .button:hover{
-  background: $color_secundario;
+  background: red;
 }
 
 
 .wrapper .button .icon{
-  background: $color_secundario;
+  background: red;
 }
 
 
 .wrapper .button .icon{
-  background: $color_secundario;
+  background: red;
 }
 
 
 .wrapper .button:hover .icon i{
-  color: $color_secundario;
+  color: red;
 }
 .wrapper .button span{
   font-size: 10px;
@@ -178,5 +187,26 @@ footer{
   transition: all 0.3s ease-out;
 }
 .wrapper .button span{
-  color: $color_secundario;
+  color: red;
+}
+
+@media all and (max-width: 420px) {
+  .row {
+    align-items: center;
+  }
+
+  .food-article {
+    margin-top: 6rem;
+    margin-bottom: 1rem;
+    height: 340px;
+    color: black;
+    background-color: rgba(255, 255, 255, 0.185);
+  
+    img{
+      position: relative;
+      margin-top: 10px;
+      height: 60%;
+      width: 300px;
+    }
+  }
 }
